--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,10 @@ a {
   color: #00d1b2;
 }
 
+a:hover {
+  color: #fff;
+}
+
 .hline {
   border-bottom: 2px solid #fff;
 }
@@ -48,6 +52,12 @@ a {
 .vline {
   width: 2px;
   margin: auto;
+}
+
+@media (max-width: 769px) {
+  .vline {
+    display: none;
+  }
 }
 
 .vline-white {
@@ -58,18 +68,12 @@ a {
   border-left: 2px solid #00120b;
 }
 
-@media screen and (max-width: 768px) {
-  .vline {
-    display: none;
-  }
-}
-
 .navbar {
   position: fixed;
   top: 0;
+  width: 100%;
   -webkit-transition: top 0.8s ease, background 0.8s ease;
   transition: top 0.8s ease, background 0.8s ease;
-  width: 100%;
 }
 
 @media (max-width: 1088px) {
@@ -88,20 +92,20 @@ a {
   font-family: 'Architects Daughter', cursive;
 }
 
-.navbar a.navbar-item:hover, .navbar a.navbar-item.is-active, .navbar .navbar-link:hover, .navbar .navbar-link.is-active {
-  background: none;
-  color: #00d1b2;
-}
-
 .navbar a.navbar-item {
   position: relative;
   margin: 0;
 }
 
+.navbar a.navbar-item:hover, .navbar a.navbar-item.is-active, .navbar .navbar-link:hover, .navbar .navbar-link.is-active {
+  background: none;
+  color: #00d1b2;
+}
+
 .navbar .navbar-burger {
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   z-index: 100;
 }
 
@@ -111,7 +115,7 @@ a {
   left: 0;
   right: 100%;
   margin: auto;
-  width: 0%;
+  width: 0;
   content: '.';
   color: transparent;
   background: #00d1b2;
@@ -126,8 +130,8 @@ a {
 
 @media (max-width: 1088px) {
   .navbar .navbar-menu {
-    background: -webkit-gradient(linear, right top, left top, color-stop(2%, rgba(3, 78, 81, 0.8)), to(rgba(255, 255, 255, 0)));
-    background: linear-gradient(to left, rgba(3, 78, 81, 0.8) 2%, rgba(255, 255, 255, 0));
+    background: -webkit-gradient(linear, right top, left top, color-stop(1%, rgba(3, 78, 81, 0.8)), to(rgba(255, 255, 255, 0)));
+    background: linear-gradient(to left, rgba(3, 78, 81, 0.8) 1%, rgba(255, 255, 255, 0));
     text-align: right;
   }
 }
@@ -157,13 +161,9 @@ a {
   margin-top: 2%;
 }
 
-a:hover {
-  color: #fff;
-}
-
 .carousel .carousel-container .carousel-item .title {
   -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
   text-align: left;
   background: none;
   font-size: 2rem;
@@ -197,57 +197,96 @@ a:hover {
   }
 }
 
-.hero.landing .level {
+.hero.landing .full-container {
+  width: 80vw;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+}
+
+@media (max-width: 769px) {
+  .hero.landing .full-container .hline {
+    display: none;
+  }
+}
+
+.hero.landing .full-container .level {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.hero.landing .full-container .level * {
+  margin: 1rem;
+}
+
+.hero.landing .full-container .level a * {
+  margin: 0;
+}
+
+.hero.landing .full-container .level .button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 @media (max-width: 1280px) {
-  .hero.landing .level {
+  .hero.landing .full-container .level {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
   }
 }
 
 @media (max-width: 769px) {
-  .hero.landing .level {
+  .hero.landing .full-container .level {
+    margin: auto;
     margin-top: 2%;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     font-size: 140%;
   }
 }
 
-.hero.landing .level a:last-child {
+.hero.landing .full-container .level a:last-child {
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
   font-size: 1.6em;
 }
 
 @media (max-width: 1088px) {
-  .hero.landing .level a:last-child {
+  .hero.landing .full-container .level a:last-child {
     font-size: 1.4em;
   }
 }
 
 @media (max-width: 769px) {
-  .hero.landing .level a:last-child {
+  .hero.landing .full-container .level a:last-child {
+    margin-top: 1%;
     color: #fff;
   }
 }
 
 @media (max-width: 769px) {
-  .hero.landing .level a:hover {
+  .hero.landing .full-container .level a:hover {
     color: #00d1b2;
+  }
+}
+
+@media (max-width: 769px) {
+  .hero.landing .full-container {
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center;
   }
 }
 
@@ -257,13 +296,14 @@ a:hover {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   margin-top: 30vh;
   padding: 3rem 0;
 }
 
 .hero-body .title {
+  text-align: left;
   margin: 1rem;
 }
 
@@ -276,13 +316,14 @@ a:hover {
 @media (max-width: 769px) {
   .hero-body .title {
     font-size: 1.6em;
+    text-align: center;
   }
 }
 
 .hero-body > .container, .hero.is-fullheight .hero-body > .container {
   -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
+  -ms-flex-positive: 0;
+  flex-grow: 0;
 }
 
 .about {
@@ -299,11 +340,11 @@ a:hover {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   text-align: right;
 }
 
@@ -335,6 +376,12 @@ a:hover {
   color: #00120b;
 }
 
+@media (max-width: 768px) {
+  .news .heading {
+    text-align: center;
+  }
+}
+
 .news .button {
   border: #00120b 1px solid;
   font-size: 120%;
@@ -357,9 +404,58 @@ a:hover {
   color: #00120b;
 }
 
+@media (max-width: 1088px) {
+  .news .title {
+    font-size: 1.8em;
+  }
+}
+
+@media (max-width: 900px) {
+  .news .title {
+    font-size: 1.4em;
+  }
+}
+
+@media (max-width: 768px) {
+  .news .title {
+    font-size: 3em;
+  }
+}
+
+@media (max-width: 506px) {
+  .news .title {
+    font-size: 2em;
+  }
+}
+
 .news .blurb {
   color: #00120b;
-  font-size: 90%;
+  font-size: 1em;
+  margin-left: 2%;
+}
+
+@media (max-width: 1088px) {
+  .news .blurb {
+    font-size: 0.8em;
+  }
+}
+
+@media (max-width: 900px) {
+  .news .blurb {
+    font-size: 0.7em;
+  }
+}
+
+@media (max-width: 768px) {
+  .news .blurb {
+    font-size: 1.1em;
+  }
+}
+
+@media (max-width: 506px) {
+  .news .blurb {
+    font-size: 0.8em;
+  }
 }
 
 .news .vline {
@@ -369,6 +465,24 @@ a:hover {
 .news .overlay-middle-right {
   top: 30%;
   right: 8%;
+}
+
+@media (max-width: 1088px) {
+  .news .overlay-middle-right {
+    top: 34%;
+  }
+}
+
+@media (max-width: 900px) {
+  .news .overlay-middle-right {
+    top: 32%;
+  }
+}
+
+@media (max-width: 768px) {
+  .news .overlay-middle-right {
+    top: 30%;
+  }
 }
 
 @media (max-width: 769px) {
@@ -453,7 +567,7 @@ a:hover {
 }
 
 .events .vline {
-  height: 110vh;
+  height: 100vh;
 }
 
 .events .overlay-middle-right {
@@ -501,8 +615,8 @@ a:hover {
 .work {
   background: url(../../img/_DSC8037.jpg) top center/cover;
   -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
 }
 
 .work .blurb {
@@ -611,12 +725,12 @@ a:hover {
 
 .hero-foot .media-item:first-child {
   -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
 }
 
 .hero-foot .media-item:last-child {
   -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
 }
 
 .hero-foot .address {
@@ -625,8 +739,8 @@ a:hover {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .hero-foot .address span {
@@ -657,23 +771,23 @@ a:hover {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 @media (max-width: 769px) {
   .hero-foot .social-media {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     -ms-flex-line-pack: justify;
-        align-content: space-between;
+    align-content: space-between;
   }
 }
 
@@ -713,29 +827,9 @@ section {
   padding: 8%;
 }
 
-.section-container {
+section .section-container {
   width: 85%;
   margin: auto;
-}
-
-.full-container {
-  width: 80vw;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-}
-
-.full-container .level {
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.full-container .level * {
-  margin: 1rem;
-}
-
-.full-container .level a * {
-  margin: 0;
 }
 
 .pattern .hero-body {
@@ -753,34 +847,14 @@ section {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 .media-item {
   position: relative;
-}
-
-.media-item-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.media-item-content-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .overlay {
