--- a/scss/sections/_landing.scss
+++ b/scss/sections/_landing.scss
@@ -1,53 +1,106 @@
 .hero.landing {
     background: url(../../img/_DSC8072.jpg) center / cover;
-    margin-bottom: 0;
+    margin-bottom: $none;
     @include desktop {
         padding-top: 4%;
     }
-    .level {
-        display: flex;
-        @include widescreen {
-            flex-direction: row;
+    .full-container {
+        width: 80vw;
+        -ms-flex-item-align: start;
+            align-self: flex-start;
+        .hline {
+            @include tablet {
+                display: none;
+            }
+        }
+        .level {
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-box-pack: end;
+                -ms-flex-pack: end;
+                    justify-content: flex-end;
+            * {
+                margin: $small-margin;
+            }
+            a {
+                * {
+                    margin: $none;
+                }
+            }
+            .button {
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-pack: justify;
+                    -ms-flex-pack: justify;
+                        justify-content: space-between;
+            }
+            @include widescreen {
+                -webkit-box-orient: horizontal;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: row;
+                        flex-direction: row;
+            }
+            @include tablet {
+                margin: auto;
+                margin-top: 2%;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
+                font-size: 140%;
+            }
+            a:last-child {
+                -ms-flex-item-align: center;
+                    -ms-grid-row-align: center;
+                    align-self: center;
+                font-size: 1.6em;
+                @include desktop {
+                    font-size: 1.4em;
+                }
+                @include tablet {
+                    margin-top: 1%;
+                    color: $white;
+                }
+            }
+            a:hover {
+                @include tablet {
+                    color: $primary-green;
+                }
+            }
         }
         @include tablet {
-            margin-top: 2%;
-            justify-content: flex-start;
-            flex-direction: column;
-            font-size: 140%;
-        }
-        a:last-child {
-            align-self: center;
-            font-size: 1.6em;
-            @include desktop {
-                font-size: 1.4em;
-            }
-            @include tablet {
-                color: $white;
-            }
-        }
-        a:hover {
-            @include tablet {
-                color: $primary-green;
-            }
+            -ms-flex-item-align: center;
+                -ms-grid-row-align: center;
+                align-self: center;
         }
     }
 }
 .hero-body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-top: 30vh;
-    padding: 3rem 0;
+    padding: 3rem $none;
     .title {
+        text-align: left;
         margin: $small-margin;
         @include widescreen {
             font-size: 2em;
         }
         @include tablet {
             font-size: 1.6em;
+            text-align: center;
         }
     }
 }
-
 .hero-body > .container, .hero.is-fullheight .hero-body > .container {
-    flex-grow: 0;
+    -webkit-box-flex: $none;
+        -ms-flex-positive: $none;
+            flex-grow: $none;
 }
