--- a/scss/themes/_layout.scss
+++ b/scss/themes/_layout.scss
@@ -1,80 +1,52 @@
 section {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: $none;
+    margin-bottom: $none;
     padding: $section-padding;
-}
-
-.section-container {
-    width: 85%;
-    margin: auto;
-}
-
-.full-container {
-    width: 80vw;
-    align-self: flex-start;
-    .level {
-        justify-content: flex-end;
-        * {
-            margin: $small-margin;
-        }
-        a {
-            * {
-                margin: 0;
-            }
-        }
+    .section-container {
+        width: 85%;
+        margin: auto;
     }
 }
-
-.pattern .hero-body {
-    margin-top: 0;
-    padding-top: 0;
+.pattern {
+    .hero-body {
+        margin-top: $none;
+        padding-top: $none;
+    }
 }
-
 .field {
     margin-top: $field-margin;
 }
-
 .column {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
 }
-
 .media-item {
     position: relative;
 }
-
-.media-item-content {
-    display: flex;
-    flex-direction: row;
-}
-
-.media-item-content-text {
-    display: flex;
-    flex-direction: column;
-}
-
 .overlay {
     position: absolute;
     z-index: 1;
 }
-
 .overlay-bottom-left {
-    bottom: 7%;
-    left: 4%;
+    bottom: $overlay-bottom;
+    left: $overlay-horizontal-large;
 }
-
 .overlay-bottom-right {
-    bottom: 7%;
-    right: 4%;
+    bottom: $overlay-bottom;
+    right: $overlay-horizontal-large;
 }
-
 .overlay-top-left {
-    top: 2%;
-    left: 2%;
+    top: $overlay-top;
+    left: $overlay-horizontal-small;
 }
-
 .overlay-top-right {
-    top: 2%;
-    right: 2%;
+    top: $overlay-top;
+    right: $overlay-horizontal-small;
 }
